--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
- 
+  
 }
+
+h5 { text-align:left; }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
